# s3man

./: .SRCINFO  PKGBUILD  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
packaging/aur/: .SRCINFO  PKGBUILD.template
scripts/release/: generate-aur.sh
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  models.rs  s3ops.rs  storage.rs
src/components/: ConnectionForm.tsx  ConnectionSidebar.tsx  FileBrowser.tsx
src/components/ui/: sidebar.tsx
src/lib/: api.ts
