[package]
name = "s3man"
version = "0.1.0"
description = "Cross-platform S3 desktop manager"
authors = ["Sebas"]
license = "MIT"
edition = "2021"

[lib]
name = "s3man_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-sdk-s3 = "1"
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
tokio = { version = "1", features = ["full"] }
aes-gcm = "0.10"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
dirs = "5"
zip = "0.6"
